--- a/lib/templates/new/yaml/deployment.yaml
+++ b/lib/templates/new/yaml/deployment.yaml
@@ -17,4 +17,4 @@ spec:
     spec:
       containers:
       - name: <%= role %>
-        image: <%%= built_image %>
+        image: <%%= docker_image %>
