--- a/lib/templates/new/yaml/pod.yaml
+++ b/lib/templates/new/yaml/pod.yaml
@@ -4,7 +4,7 @@ metadata:
   name: <%= app %>
 spec:
   containers:
-  - image: <%%= built_image %>
+  - image: <%%= docker_image %>
     command:
     - sleep
     - '3600'
