--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,9 @@
 variables:
   DEFAULT_DOCKER_FILE: "Dockerfile.amazon2"
 
+stages:
+  - build
+
 build-n-push-latest:
   stage: build
   image: docker:stable
@@ -9,11 +12,10 @@ build-n-push-latest:
     - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
   services:
     - docker:dind
-  stage: prepare
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t $CI_REGISTRY/$CI_PROJECT_PATH_SLUG/kubes:latest -f $DEFAULT_DOCKER_FILE .
-    - docker push $CI_REGISTRY/$CI_PROJECT_PATH_SLUG/kubes:latest
+    - docker build -t $CI_REGISTRY/$CI_PROJECT_PATH/kubes:latest -f $DEFAULT_DOCKER_FILE .
+    - docker push $CI_REGISTRY/$CI_PROJECT_PATH/kubes:latest
 
 build-n-push-version:
   stage: build
@@ -22,8 +24,7 @@ build-n-push-version:
     - if: $CI_COMMIT_TAG =~ /[v][0-9]+[.][0-9]+[.][0-9]+/
   services:
     - docker:dind
-  stage: prepare
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t $CI_REGISTRY/$CI_PROJECT_PATH_SLUG/kubes:CI_COMMIT_TAG -f $DEFAULT_DOCKER_FILE .
-    - docker push $CI_REGISTRY/$CI_PROJECT_PATH_SLUG/kubes:$CI_COMMIT_TAG
+    - docker build -t $CI_REGISTRY/$CI_PROJECT_PATH/kubes:CI_COMMIT_TAG -f $DEFAULT_DOCKER_FILE .
+    - docker push $CI_REGISTRY/$CI_PROJECT_PATH/kubes:$CI_COMMIT_TAG
