central deployer support
* Kubes.app concept
* early boot hook
* app-level overrides support: config/env, variables, resources
* config.kubectl.context_keep = false
* dont write config skip files
* erb comment preprocessor
* kubes.skip metadata ability
* use .kubes/tmp/state to reduce ignored folders
* speed up docs build

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -70,4 +70,10 @@ defaults:
 plugins_dir:
   # - jekyll-gzip - GitHub pages does not support this plugin.
 
+# List of supported plugins:
+# https://pages.github.com/versions.json
+# https://github.com/github/pages-gem/issues/171
+plugins:
+- jekyll-include-cache # Supported by GitHub pages
+
 ads_url: "https://ads.boltops.com"
