--- a/lib/templates/new/resource/yaml/ingress.yaml
+++ b/lib/templates/new/resource/yaml/ingress.yaml
@@ -1,12 +1,10 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: <%= role %>
 spec:
-  rules:
-  - http:
-      paths:
-      - path: "/*"
-        backend:
-          serviceName: <%= role %>
-          servicePort: 80
+  defaultBackend:
+    service:
+      name: web
+      port:
+        number: 80
