improve new secret generator

--- a/lib/templates/new/resource/yaml/secret.yaml
+++ b/lib/templates/new/resource/yaml/secret.yaml
@@ -5,5 +5,5 @@ metadata:
   labels:
     app: <%= app %>
 data:
-  username: dXNlcg==
-  password: cGFzcw==
+  username: <%%= base64("user") %>
+  password: <%%= base64("pass") %>
